--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -23,6 +23,7 @@
   		<groupId>org.glassfish</groupId>
   		<artifactId>javax.json</artifactId>
   		<version>1.0.4</version>
+  		<scope>runtime</scope>
   	</dependency>
   </dependencies>
 </project>
