--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: java
 jdk:
   - oraclejdk8
 script: 
-  - cd hibiscus && mvn test
+  - cd hibiscus && mvn install && cd ..
+  - cd hibiscus-examples && mvn package && java -jar target/hibiscus-examples-0.1.0.jar
