--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -1,6 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.i49.hibiscus</groupId>
+
+  <!-- The Basics -->
+  <groupId>com.github.i49</groupId>
   <artifactId>hibiscus</artifactId>
   <version>0.1.0</version>
   <properties>
@@ -27,4 +30,23 @@
   		<scope>test</scope>
   	</dependency>
   </dependencies>
+  
+  <!-- Project Information -->
+  <name>Hibiscus</name>
+  <description>Hibiscus is JSON validator</description>
+  <url>https://github.com/i49/Hibiscus</url>
+  <inceptionYear>2016</inceptionYear>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>manual</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <connection>scm:git:https://github.com/i49/Hibiscus.git</connection>
+    <developerConnection>scm:git@github.com:i49/Hibiscus.git</developerConnection>
+    <url>https://github.com/i49/Hibiscus</url>  
+  </scm>
+  
 </project>
