--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -14,21 +14,27 @@
   </properties>
   <dependencies>
   	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.12</version>
-  		<scope>test</scope>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
   	</dependency>
   	<dependency>
-  		<groupId>javax.json</groupId>
-  		<artifactId>javax.json-api</artifactId>
-  		<version>1.0</version>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+      <version>1.0</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.glassfish</groupId>
-  		<artifactId>javax.json</artifactId>
-  		<version>1.0.4</version>
-  		<scope>test</scope>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <version>1.0.4</version>
+      <scope>test</scope>
+  	</dependency>
+  	<dependency>
+  	  <groupId>ch.qos.logback</groupId>
+  	  <artifactId>logback-classic</artifactId>
+  	  <version>1.1.7</version>
+  	  <scope>test</scope>
   	</dependency>
   </dependencies>
 
@@ -36,6 +42,14 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+         <argLine>-Dlog.level=INFO</argLine>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
