--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -40,6 +40,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
+        <configuration>
+          <excludes>
+            <exclude></exclude>
+          </excludes>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
