--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -30,6 +30,11 @@
       <version>1.0.4</version>
       <scope>test</scope>
   	</dependency>
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.5.1</version>
+    </dependency>
   </dependencies>
 
   <!-- Build Settings -->
