--- a/hibiscus-examples/pom.xml
+++ b/hibiscus-examples/pom.xml
@@ -17,12 +17,6 @@
   		<artifactId>hibiscus</artifactId>
   		<version>0.1.0-SNAPSHOT</version>
   	</dependency>
-  	<dependency>
-  		<groupId>org.glassfish</groupId>
-  		<artifactId>javax.json</artifactId>
-  		<version>1.0.4</version>
-  		<scope>runtime</scope>
-  	</dependency>
   </dependencies>
 
   <!-- Build Settings -->
@@ -61,6 +55,36 @@
       </plugin>
     </plugins>
   </build>
+
+  <!-- Profiles -->
+
+  <profiles>
+    <profile>
+      <id>jsonp-glassfish-ri</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.json</artifactId>
+          <version>1.0.4</version>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>jsonp-johnzon</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.johnzon</groupId>
+          <artifactId>johnzon-core</artifactId>
+          <version>0.9.5</version>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 
   <!-- Project Information -->
 
