--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -24,12 +24,6 @@
       <artifactId>javax.json-api</artifactId>
       <version>1.0</version>
   	</dependency>
-  	<dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>javax.json</artifactId>
-      <version>1.0.4</version>
-      <scope>test</scope>
-  	</dependency>
     <dependency>
       <groupId>commons-validator</groupId>
       <artifactId>commons-validator</artifactId>
@@ -69,6 +63,36 @@
       </plugin>
     </plugins>
   </build>
+  
+  <!-- Profiles -->
+
+  <profiles>
+    <profile>
+      <id>jsonp-glassfish-ri</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.json</artifactId>
+          <version>1.0.4</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>jsonp-johnzon</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.johnzon</groupId>
+          <artifactId>johnzon-core</artifactId>
+          <version>0.9.5</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
   
   <!-- Project Information -->
 
