--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -40,6 +40,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
         <configuration>
+          <argLine>-Duser.language=en -Duser.country=US</argLine>
           <excludes>
             <exclude></exclude>
           </excludes>
