--- a/hibiscus/pom.xml
+++ b/hibiscus/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.github.i49</groupId>
   <artifactId>hibiscus</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
