--- a/hibiscus-examples/pom.xml
+++ b/hibiscus-examples/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.github.i49</groupId>
   <artifactId>hibiscus-examples</artifactId>
-  <version>0.1.0</version>
+  <version>0.2.0-SNAPSHOT</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>com.github.i49</groupId>
       <artifactId>hibiscus</artifactId>
-      <version>0.1.0</version>
+      <version>0.2.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
@@ -79,7 +79,7 @@
         <dependency>
           <groupId>org.apache.johnzon</groupId>
           <artifactId>johnzon-core</artifactId>
-          <version>0.9.5</version>
+          <version>1.0.0</version>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
