--- a/hibiscus-examples/pom.xml
+++ b/hibiscus-examples/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.github.i49</groupId>
   <artifactId>hibiscus-examples</artifactId>
-  <version>0.3.0</version>
+  <version>0.4.0-SNAPSHOT</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>com.github.i49</groupId>
       <artifactId>hibiscus</artifactId>
-      <version>0.3.0</version>
+      <version>0.4.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
